--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -5,6 +5,7 @@ $color-white: #fff;
 $color-black: #000;
 $color-grey-dark: #242424;
 $color-grey: #606060;
+$color-grey-filter: #808080;
 $color-grey-medium: #b0b0b0;
 $color-grey-light: #ddd;
 $color-off-white: #e9eae1;
